[package]
name = "gitnav"
description = "GitNav: Git repository navigator"
version = "0.1.0"
edition = "2021"
authors = ["Álvaro Rausell Guiard"]

[dependencies]
clap = { version = "4.5.21", features = ["cargo", "derive"] }
colored = "2.1.0"
git2 = "0.19.0"
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
